# moveit_manipulation_demo

./: README.md  README.txt
robot_io/: CMakeLists.txt  README.md  package.xml
robot_io/launch/: soem_manager.launch
robot_io/msg/: RegisterData.msg  RegisterInfo.msg
robot_io/src/nodes/: simulated_grasp_action_server.cpp  soem_manager.cpp
robot_io/srv/: SoemIO.srv
robot_model_config/: CMakeLists.txt  mainpage.dox  package.xml  xacrodisplay.launch
robot_model_config/launch/: sia20d_visualization.launch  ur5_visualization.launch
robot_model_config/rviz/: ur5_config.rviz
robot_model_config/urdf/: sia20d_workspace.xacro  simple_2fgripper_macro.xacro  ur5_2fgripper.xacro  ur5_collision_avoidance.urdf  ur5_collision_avoidance.xacro  ur5_model.urdf.xacro  ur5_workspace.urdf  ur5_workspace.xacro  vacuum_gripper_macro.xacro
robot_pick_and_place/: CMakeLists.txt  mainpage.dox  package.xml
robot_pick_and_place/config/ur5/: cylinder_cloud_descriptions.yaml  demo_pick_and_place.rviz  pick_and_place_parameters.yaml  rviz_config.rviz  surface_detection.yaml
robot_pick_and_place/include/robot_pick_and_place/: pick_and_place.h  pick_and_place_utilities.h
robot_pick_and_place/launch/: publish_sensor_data_bag.launch  ur5_demo.launch  ur5_grasp_planning.launch  ur5_pick_and_place.launch  ur5_pick_and_place_service.launch  ur5_publish_test_point_cloud.launch  ur5_setup.launch  ur5_setup_test.launch  ur5_target_recognition.launch
robot_pick_and_place/src/: pick_and_place.cpp
robot_pick_and_place/src/nodes/: collision_object_publisher.py  pick_and_place_node.cpp
robot_pick_and_place/src/services/: grasp_pose_service.cpp  pick_and_place_service.cpp  simulation_recognition_service.py  target_recognition_service.cpp
robot_pick_and_place/src/tasks/: create_motion_plan.cpp  create_pick_moves.cpp  create_place_moves.cpp  detect_box_pick.cpp  detect_target_pose.cpp  move_to_wait_position.cpp  pickup_box.cpp  place_box.cpp  reset_world.cpp  set_attached_object.cpp  set_gripper.cpp
robot_pick_and_place/src/utilities/: pick_and_place_utilities.cpp
robot_pick_and_place/srv/: GraspPose.srv  RobotPickAndPlace.srv
robot_pick_and_place_plugins/: CMakeLists.txt  package.xml  plugin.xml
robot_pick_and_place_plugins/include/robot_pick_and_place_plugins/rviz_panels/: pick_and_place_panel.h
robot_pick_and_place_plugins/src/rviz_panels/: pick_and_place_panel.cpp
robot_pick_and_place_plugins/ui/: pick_and_place_widget.ui
sensor_config/launch/: ur5_sensor_setup.launch  ur5_tag_detection.launch
ur5_2fgripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_2fgripper_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors.yaml  ur5_2fgripper.srdf
ur5_2fgripper_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_2fgripper_moveit_controller_manager.launch.xml  ur5_2fgripper_moveit_sensor_manager.launch.xml  warehouse.launch
